--- a/master peace ajloun/edit_profile.html
+++ b/master peace ajloun/edit_profile.html
@@ -732,6 +732,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- <script src="js/profile.js"></script> -->
     <script src="js/jquery-3.2.1.min.js"></script>
